site/gct.css
/*********************************************
 * GLOBAL STYLES
 *********************************************/
.slide-deck {
width:100%;
float: center;
}
caption{
  font-size: 1.3rem;
  font-weight: bold;
}
th {
  font-size: 1.2rem;
}

td {
    font-size: 18px;
}
table tr:nth-child(odd) td{
    background-color: #ebf2ff;

}
table tr:nth-child(even) td{
  background-color: #f7f9fc;
}

/******************************
* Columns
************************************/
#left {
  left:-5.33%;
  text-align: left;
  float: left;
  width:50%;
  z-index:-10;
}

#right {
  left:31.25%;
  top: 75px;
  float: right;
  text-align: left;
  z-index:-5;
  width:50%;

  .twocolumn {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 10px;
     text-align: right;
  }
}


input[type="checkbox"] {
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
    color: #000;
    width: 1.1rem;
    height: 1.1rem;
    padding-right: 1rem;
}

/* Checkbox un-checked style */
input[type="checkbox"]:before {
  font: 1.5em FontAwesome;
  content: '\00f096';
  border: 2px solid #698751;
  border-radius: 3px;
  display: inline-block;
  margin-right: 0.0em;
  margin-top: 0.0em;
  vertical-align: 0px;
  font: 1.1rem;
  width: 1.1rem;
  height: 1.1rem;
  background-color: #fcfdff;
}

/* Checked checkbox style (in this case the background is green #e7ffba, change this to change the color) */
input[type="checkbox"]:checked:before {
  /* NOTE: Replace the url with a path to an SVG of a checkmark to get a checkmark icon */
  background-repeat: no-repeat;
  background-position: center;
  content: '\00f046';
  /* The size of the checkmark icon, you may/may not need this */
  background-size: 25px;
  border-radius: 2px;
  background-color: #698751;
  color: black;
  font: 1.5em FontAwesome;
}


/* Disabled checkbox styles */
input[type="checkbox"]:disabled {
  opacity: 1.1rem;
}


.footer-default {
  box-sizing: content-box;
  width: 50% !important;
  padding-left: 25rem;
  font-size: 0.7rem !important;
  color: #f98d43 !important;
  font-weight: bold !important;
  text-align: center !important;
  }

.slide-logo.r-stretch {
  max-width: 15vw !important;
  max-height: 4vw !important;

}
.reveal div.sourceCode{
  margin-bottom: 1em;
  overflow: auto;
}

.navbar {
  background: linear-gradient(0.25turn,#04508f, #48bf88) !important;
  height: 80px;
}

.navbar-logo {
  max-height: 70px;
  height: 100%;
  
}

.titlelogo {
  position: absolute;
  top: 0px;
 
}

